--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
              <div>
                 <label for="influenceRadius" class="block text-sm font-medium text-gray-400 mb-1">Influence Radius (<span id="influenceRadiusValue">80</span>)</label>
-                <input type="range" id="influenceRadius" min="10" max="300" value="80" step="5" class="w-full">
+                <input type="range" id="influenceRadius" min="40" max="300" value="80" step="5" class="w-full">
             </div>
 
              <div>
@@ -96,7 +96,7 @@
 
             <div>
                 <button id="runSimulation" class="w-full px-4 py-2 mt-4 font-medium text-white bg-blue-600 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800 transition-colors">
-                    Run New Simulation
+                    Run New Sim
                 </button>
             </div>
         </div>
@@ -188,8 +188,8 @@
         }
 
         class AttractionPoint {
-            constructor(x, y) {
-                this.pos = new Vec2(x, y);
+            constructor(x, y, z) {
+                this.pos = new Vec2(x, y, z);
                 this.reached = false;
             }
         }
