--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         }
 
         class AttractionPoint {
-            constructor(x, y, z) {
-                this.pos = new Vec2(x, y, z);
+            constructor(x, y) {
+                this.pos = new Vec2(x, y);
                 this.reached = false;
             }
         }
